--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,4 +1,4 @@
-name: Events Demo 1
+name: Events Demo
 on: 
   push:
     branches:
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Output event data
-        run: echo "${{ toJSON(github.event) }}"
+        run: echo "${{ toJSON(github) }}"
       - name: Get code
         uses: actions/checkout@v3
       - name: Install dependencies
