--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -8,8 +8,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Output event data
-        run: echo "${{ toJSON(github) }}"
+     # - name: Output event data
+     #    run: echo "${{ toJSON(github) }}"
       - name: Get code
         uses: actions/checkout@v3
       - name: Install dependencies
